--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.1.0
+  provider: ^6.1.5
   shared_preferences: ^2.5.3
 
 dev_dependencies:
