--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:enableOnBackInvokedCallback="true"
-        android:label="to_do"
+        android:label="Tasky"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
